--- a/Hello World.html/index.html
+++ b/Hello World.html/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
    <h1>Ceci est l'ajout de la balise h1</h1>
+   <h2>Ceci est l'ajout de la balise h2</h2>
   </body>
 </html> 
